--- a/GMS/src/main/webapp/404.html
+++ b/GMS/src/main/webapp/404.html
@@ -6,6 +6,6 @@
 <link rel="stylesheet" href="gms.css">
 </head>
 <body>
-	<h1>Something went wrong.</h1>
+	<h1>404 Something went wrong.</h1>
 </body>
 </html>
